[tool.poetry]
name = "muffin-admin"
version = "2.3.7"
description = "Admin interface for Muffin Framework"
readme = "README.rst"
license = "MIT"
authors = ["Kirill Klenov <horneds@gmail.com>"]
keywords = ["admin", "api", "muffin", "asgi", "asyncio", "trio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
homepage = "https://github.com/klen/muffin-admin"
repository = "https://github.com/klen/muffin-admin"
packages = [{ include = "muffin_admin" }]
include = ["muffin_admin/main.js", "muffin_admin/main.js.LICENSE.txt"]

[tool.poetry.dependencies]
python = "^3.8"
muffin = "*"
muffin-rest = "*"

# Optional dependencies
pyyaml = { version = "*", optional = true }
muffin-peewee-aio = { version = "*", optional = true }
marshmallow-peewee = { version = "*", optional = true }
muffin-databases = { version = "*", optional = true }
marshmallow-sqlalchemy = { version = "*", optional = true }
sqlalchemy = { version = "*", optional = true }

[tool.poetry.extras]
yaml = ["pyyaml"]
peewee = ["muffin-peewee-aio", "marshmallow-peewee"]
sqlalchemy = ["muffin-databases", "marshmallow-sqlalchemy", "sqlalchemy"]

[tool.poetry.group.dev.dependencies]
aiofile = "*"
aiosqlite = "*"
marshmallow-peewee = "^4.0.3"
marshmallow-sqlalchemy = "^0.27.0"
muffin-databases = "*"
muffin-peewee-aio = "*"
pytest = "*"
pytest-aio = { version = "*", extras = ["curio", "trio"] }
pytest-mypy = "*"
pyyaml = "*"
ruff = "*"
pre-commit = "*"
black = "*"

[tool.poetry.group.example.dependencies]
uvicorn = "*"
mixer = "*"
peewee = "*"
muffin-peewee-aio = "*"
muffin-databases = "*"

[tool.pytest.ini_options]
addopts = "-xsv"

[tool.mypy]
packages = ["muffin_admin"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests
"""

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [".venv", "docs", "examples"]
select = ["ALL"]
ignore = [
  "A003",
  "ANN",
  "COM",
  "D",
  "DJ",
  "EM",
  "N804",
  "PLR0912",
  "PLR2004",
  "RET",
  "RSE",
  "S101",
  "SLF",
  "TRY003",
  "UP",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
preview = true

[tool.poetry_bumpversion.file."frontend/package.json"]
search = '"version": "{current_version}"'
replace = '"version": "{new_version}"'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
