[wheel]
python-tag = py3

[metadata]
name = muffin-admin
version = attr: muffin_admin.__version__
url = https://github.com/klen/muffin-admin
description = Admin interface for Muffin Framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = admin, api, muffin, asgi, asyncio, trio
project_urls = 
	Documentation = https://github.com/klen/muffin-admin
	Source code = https://github.com/klen/muffin-admin
	Issue tracker = https://github.com/klen/muffin-admin/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = muffin_admin
include_package_data = True
python_requires = >= 3.7
install_requires = 
    muffin              >= 0.64.5
    muffin-rest         >= 2.5.1

[options.extras_require]
peewee = 
	muffin-peewee
	marshmallow-peewee
sqlalchemy = 
	muffin-databases    >= 0.1.2
	marshmallow-sqlalchemy
        # https://github.com/encode/databases/issues/298
        sqlalchemy < 1.4
tests = 
    aiofile
    aiosqlite
    marshmallow-peewee
    marshmallow-sqlalchemy
    muffin-databases
    muffin-peewee
    peewee
    pytest
    pytest-aio[trio,curio]
    pytest-mypy
build = 
    bump2version
    twine
    wheel
example =
    uvicorn
    mixer
    peewee
    muffin-peewee
    muffin-databases

[mypy]
ignore_missing_imports = True

[pylama]
ignore = D107,D211,D401

[pylama:pylint]
disable = W0212

[pylama:setup.py]
ignore=D

[pylama:tests/*]
ignore=D

[pylama:examples/*.py]
ignore=D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests
