[wheel]
python-tag = py3

[metadata]
name = muffin-admin
version = 1.32.4
url = https://github.com/klen/muffin-admin
description = Admin interface for Muffin Framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = admin, api, muffin, asgi, asyncio, trio
project_urls = 
    Documentation = https://github.com/klen/muffin-admin
    Source code = https://github.com/klen/muffin-admin
    Issue tracker = https://github.com/klen/muffin-admin/issues
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: AsyncIO
    Framework :: Trio

[options]
packages = muffin_admin
include_package_data = True
python_requires = >= 3.7
 
[options.package_data]
muffin_admin = py.typed, main.js, admin.html

[mypy]
ignore_missing_imports = True

[pylama]
ignore = D107,D211,D213,D401

[pylama:pylint]
disable = W0212

[pylama:setup.py]
ignore=D

[pylama:tests/*]
ignore=D

[pylama:examples/*.py]
ignore=D

[tool:pytest]
addopts = -xsv --mypy

[tox:tox]
envlist = py37,py38,py39,py310

[testenv]
deps =
    -rrequirements/requirements.txt
    -rrequirements/requirements-tests.txt
    -e .[tests]
commands = 
    pytest tests
